example/gcp/assets/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: k8s-setup-check
  name: k8s-setup-check-service
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: k8s-setup-check
  ports:
    - protocol: TCP
      name: http
      port: 8080
