example/gcp/assets/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-setup-check-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # external-dns.alpha.kubernetes.io/target: "<INSERT IP>"
spec:
  ingressClassName: nginx
  rules:
    - host: <domain.com>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-setup-check-service
                port:
                  number: 8080
